jorge first draft of paper and appendix ready

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -31,7 +31,7 @@ The University of Chicago}
 \maketitle
 
 \singlespacing
-\pagebreak
+%\pagebreak
 \tableofcontents
 \listoffigures
 \listoftables
@@ -39,7 +39,11 @@ The University of Chicago}
 
 \section{Introduction}
 
-\noindent One of President Barack Obama's policy goals throughout his tenure has been the promotion of early childhood education as a means of reducing socio-economic inequality \citep{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}. Candidates across the political spectrum to succeed President Obama have also prioritized the discussion of early childhood education.\footnote{Candidates from both parties consider access to education a right Americans should have; all make particular emphasis on early childhood education \citep{Hillary-for-Am_2016_Universal-Preschool,On-the-Issues_2016_Sanders-on-Families,On-the-Issues_2016_Cruz-on-Education}.} Yet, comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of early childhood education programs is still scarce. Many recent studies suffer from one of the following pitfalls: (i) they focus on a limited set of outcomes that fail to account for the complete set of program impacts;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible to children who were just ineligible given their birth dates and assess the gain of an additional year of preschool. This does not represent a comprehensive evaluation approach. Instead, it is an evaluation comparing an arbitrary set of children, in a very narrow set of tests. Examples of these studies include: \citet{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) they do not take into account that, even when evaluating randomized controlled trials, evaluation methodologies must account for randomization non-compliance and treatment substitution by the control families;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing the children in the treatment and the control groups usually yields relative low gains. This attenuation happens because a substantial proportion of children randomized out of the program were enrolled into preschool alternatives, some of them to other Head Start centers. Thus, a raw comparison between the treatment and the control groups children does not inform on either the efficiency or the effectiveness of Head Start. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} or (iii) they evaluate randomized controlled trials with flawed designs.\footnote{An evaluation Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, they have information available for children whose parents agreed for them to be evaluates \textit{post} randomization, inducing a potential imbalance between the children randomized in and out of the program. The evaluation does not account for that. Further, the results this evaluation present are on a narrow and short-term set of outcomes.}\\ 
+\noindent One of President Barack Obama's policy goals throughout his tenure has been the promotion of early childhood education as a means of reducing socio-economic inequality \citep{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}. Candidates across the political spectrum to succeed President Obama have also prioritized the discussion of early childhood education.\footnote{Candidates from both parties consider access to education a right Americans should have; all make particular emphasis on early childhood education \citep{Hillary-for-Am_2016_Universal-Preschool,On-the-Issues_2016_Sanders-on-Families,On-the-Issues_2016_Cruz-on-Education}.}\\ 
+
+\noindent The relevance of early childhood education is not only a public debate matter. Public funding of early childhood education has been on the rise in recent years with the intention of reducing socio-economic inequality. The Education Commission of the States reports that 32 states increased spending on early childcare for the 2015-2016 year, with an overall state-spending increase of 12 percent. Similarly, the federal budget proposal for 2017 included an approximately \$300 million increase in spending on early childhood education.\\
+
+\noindent Despite the importance of early childhood education both in the public debate and in the allocation of the government's budget, comprehensive and methodologically rigorous evidence on its efficiency and effectiveness  is still scarce. Many recent studies suffer from one of the following pitfalls: (i) they focus on a limited set of outcomes that fail to account for the complete set of program impacts;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible to children who were just ineligible given their birth dates and assess the gain of an additional year of preschool. This does not represent a comprehensive evaluation approach. Instead, it is an evaluation comparing an arbitrary set of children, in a very narrow set of tests. Examples of these studies include: \citet{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) they do not take into account that, even when evaluating randomized controlled trials, evaluation methodologies must account for randomization non-compliance and treatment substitution by the control families;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing the children in the treatment and the control groups usually yields relative low gains. This attenuation happens because a substantial proportion of children randomized out of the program were enrolled into preschool alternatives, some of them to other Head Start centers. Thus, a raw comparison between the treatment and the control groups children does not inform on either the efficiency or the effectiveness of Head Start. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} or (iii) they evaluate randomized controlled trials with flawed designs.\footnote{An evaluation Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, they have information available for children whose parents agreed for them to be evaluates \textit{post} randomization, inducing a potential imbalance between the children randomized in and out of the program. The evaluation does not account for that. Further, the results this evaluation present are on a narrow and short-term set of outcomes.}\\ 
 
 \noindent  The case for the effectiveness and the economic efficiency of early childhood education in the U.S. is largely based on evidence from the Perry Preschool Program (referred to simply as Perry). Analyses of Perry suggests that (i) early childhood education has significant positive effects on multiple short and long-term socio-economic outcomes, even when accounting for compromised randomization, small-sample-size inference, and multiple hypotheses testing \citep{Heckman_Moon_etal_2010_QE}; (ii) early childhood education could have an annual internal rate of return that ranges between 7 and 10 percent;\footnote{If one dollar were to be invested at age 4, and then reinvested annually and compounded over a lifetime, the return would accrue to 60 to 300 dollars by age 65. This accounts for all the programs' cost and the social burden a government would cause by raising taxes to pay for it \citep{Heckman_Moon_etal_2010_RateofReturn}} and (iii) the mechanisms through which early education programs generate gains in long-term outcomes, namely that gains in socio-emotional skills---much more than gains cognitive skills---mediate decreases in criminal behavior and increases in employment and labor income \citep{Heckman_Pinto_etal_2013_PerryFactor}.\\
 
@@ -55,7 +59,7 @@ The University of Chicago}
 
 \noindent Finally, we propose a method to summarize the effectiveness of a program when information on multiple outcomes throughout the life-cycle is available. There are two current alternatives in the literature. One is to to calculate statistics that characterize the efficiency of a social program, such as the internal rate of return or the benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}. The other is to group outcomes into categories---e.g., cognition, criminal activity, health---and adjust the inference on each of the outcomes to account for multiple hypotheses testing and to avoid ``cherry picking'' significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. In this paper, we propose a method to calculatie and formalize an inference procedure for (i) the count of outcomes for which the program causes a positive treatment effect; and (ii) the count of outcomes for which the program causes a \emph{significant} and positive treatment effect, considering different levels of significance.\footnote{This alternative is an application of conducting inference on a statistic that summarizes information across multiple sources---i.e., a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}\\
 
-\noindent \textbf{[JLG: next three paragraphs, description of results.]}\\
+\noindent \textbf{[JLG: next three paragraphs, description of results, pending.]}\\
 
 \begin{comment}
 \noindent In the rest of the paper, we formalize through several procedures the data description in Table~\ref{table:}, and find solid robustness \textbf{[MT: Unclear what this means...]}. We evaluate 141 outcomes describing human development throughout the life-cycle. Although we present counts over all the outcomes, we group them into categories for simplicity. These categories are maternal employment, life-cycle cognition, adolescent socio-emotional skills, adulthood socio-emotional skills, education, employment and income, crime, and health. For each outcome, we calculate the mean difference between the treatment and control groups in ABC and the treatment groups and the control group in CARE.\\
@@ -141,7 +145,7 @@ The University of Chicago}
 	\begin{figure}[H]
 		\caption{Randomization Protocol and Treatment Compliance, ABC} \label{fig:abc-flow}
 		\centering
-		\includegraphics[width=.85\columnwidth]{output/abc_Diagram.pdf}
+		\includegraphics[width=.83\columnwidth]{output/abc_Diagram.pdf}
 \floatfoot{
 \footnotesize
 \noindent
