--- a/heckman.bib
+++ b/heckman.bib
@@ -5808,6 +5808,19 @@
   Timestamp                = {2015.12.01}
 }
 
+@Article{Baumeister-Bacharach_2000_Early-Generic,
+  Title                    = {Early Generic Educational Intervention Has No Enduring Effect on Intelligence and Does Not Prevent Mental Retardation: {T}he {I}nfant {H}ealth and {D}evelopment {P}rogram},
+  Author                   = {Baumeister, Alfred A., and Bacharach, Verne R.},
+  Journal                  = {Intelligence},
+  Year                     = {2000},
+  Number                   = {3},
+  Pages                    = {161--192},
+  Volume                   = {28},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.04.19}
+}
+
 @Article{Baumeister_Bratslavsky_etal_1998_JoPaSP,
   Title                    = {Ego depletion: Is the active self a limited resource?},
   Author                   = {Baumeister, Roy F. and Bratslavsky, Ellen and Muraven, Mark and Tice, Dianne M.},
@@ -7887,6 +7900,20 @@
 
   Owner                    = {Jenni},
   Timestamp                = {2013.01.30}
+}
+
+@InCollection{Besharov-etal_2011_ABCProject,
+  Title                    = {The {A}becedarian Project},
+  Author                   = {Besharov, Douglas J. and Germanis, Peter and Higney, Caeli A. and Call, Douglas M.},
+  Booktitle                = {Assessing the Evaluations of Early Childhood Education Programs},
+  Publisher                = {Welfare Reform Academy},
+  Year                     = {2011},
+
+  Address                  = {College Park, MD},
+  Chapter                  = {2},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.04.19}
 }
 
 @Article{Besley_Coate_etal_1994_REStud,
@@ -21075,6 +21102,20 @@
   Timestamp                = {2008.04.08}
 }
 
+@TechReport{DeNavas-Walt-Proctor_2015_Inc-Pov-US,
+  Title                    = {Income and Poverty in the {U}nited {S}tates: 2014},
+  Author                   = {DeNavas-Walt, Carmen and Proctor, Bernadette D.},
+  Institution              = {U.S. Census Bureau},
+  Year                     = {2015},
+
+  Address                  = {Washington, DC},
+  Number                   = {P60-252},
+  Type                     = {Current Population Report},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.17}
+}
+
 @Article{Deng_Quigley_etal_2000_Econometrica,
   Title                    = {Mortgage Terminations, Heterogeneity and the Exercise of Mortgage Options},
   Author                   = {Deng, Yongheng and Quigley, John M. and Van Order, Robert},
@@ -24617,6 +24658,18 @@
   Volume                   = {359},
 
   Timestamp                = {2009.01.16}
+}
+
+@Electronic{Childrens-Health_2016_Bayley-Scales,
+  Title                    = {{B}ayley Scales of Infant Development},
+  Author                   = {{Encyclopedia of Children's Health}},
+  HowPublished             = {Website, http://www.healthofchildren.com/B/Bayley-Scales-of-Infant-Development.html (Accessed 4/19/2016)},
+  Organization             = {{Encyclopedia of Children's Health}},
+  Url                      = {http://www.healthofchildren.com/B/Bayley-Scales-of-Infant-Development.html},
+  Year                     = {2016},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.04.19}
 }
 
 @Unpublished{Engelhart_undated_reportonGED,
@@ -31028,17 +31081,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31051,6 +31093,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -60465,6 +60518,19 @@ Robinson, Lara Rachel},
   Timestamp                = {2015.10.02}
 }
 
+@TechReport{Parker-etal_2016_50-State-Review,
+  Title                    = {50-State Review: State Pre-{K} Funding for 2015-16 Fiscal Year: National Trends in State Preschool Funding},
+  Author                   = {Parker, Emily and Atchison, Bruce and Workman, Emily},
+  Institution              = {Education Commission of the States},
+  Year                     = {2016},
+
+  Address                  = {Denver, CO},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.17},
+  Url                      = {http://www.ecs.org/ec-content/uploads/01252016_Prek-K_Funding_report-4.pdf}
+}
+
 @Article{Parzen_1962_AMS,
   Title                    = {On Estimation of a Probability Density Function and Mode},
   Author                   = {Parzen, Emanuel},
@@ -70846,6 +70912,19 @@ Robinson, Lara Rachel},
   Owner                    = {The Detroyer}
 }
 
+@Electronic{Smith_2016_Early-Learning-Budget,
+  Title                    = {{P}resident's Early Learning Budget for {FY}2017 and Legislation to Strengthen Child Care for Families with Young Children},
+  Author                   = {Smith, Linda K.},
+  HowPublished             = {Website, Administration for Children and Families, http://www.acf.hhs.gov/blog/2016/02/presidents-2017-early-learning-budget (Accessed 4/17/16)},
+  Month                    = {February},
+  Organization             = {Administration for Children and Families},
+  Url                      = {http://www.acf.hhs.gov/blog/2016/02/presidents-2017-early-learning-budget},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.17}
+}
+
 @Book{Smith_Glass_etal_1980_BOOKbenefitsofpsychotherapy,
   Title                    = {The benefits of psychotherapy},
   Author                   = {Smith, Mary Lee and Glass, Gene V. and Miller, Thomas I.},
@@ -71626,6 +71705,19 @@ Robinson, Lara Rachel},
 
   Owner                    = {Jenni},
   Timestamp                = {2013.05.15}
+}
+
+@Article{Spitz_1992_ABC-Retardation,
+  Title                    = {Does the {C}arolina {A}becedarian {E}arly {I}ntervention {P}roject Prevent Sociocultural Mental Retardation?},
+  Author                   = {Spitz, Herman H.},
+  Journal                  = {Intelligence},
+  Year                     = {1992},
+  Number                   = {2},
+  Pages                    = {225--237},
+  Volume                   = {16},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.04.19}
 }
 
 @Book{Spring_1989_BOOKSortingMachineRevisited,
@@ -75735,6 +75827,19 @@ early childhood education and pre-kindergarten programs},
   Month                    = {February},
   Pages                    = {29--32},
   Volume                   = {26}
+}
+
+@Book{US-Gov_2016_Budget,
+  Title                    = {Fiscal Year 2016 Budget of the {U.S.} Government},
+  Author                   = {{U.S. Office of Management and Budget}},
+  Publisher                = {U.S. Government Printing Office},
+  Year                     = {2015},
+
+  Address                  = {Washington, DC},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.17},
+  Url                      = {https://www.whitehouse.gov/sites/default/files/omb/budget/fy2016/assets/budget.pdf}
 }
 
 @Book{USPreventiveServicesTaskForce_2009_BOOKGuidetoClinical,
@@ -81762,11 +81867,6 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2015.10.02}
 }
 
-@comment{jabref-meta: selector_publisher:Cambridge University Press;El
- sevier Science B.V.;National Bureau of Economic Research;North-Hollan
- d ;Oxford University Press;Princeton University Press;University of C
-h ic ago Press;}
-
 @comment{jabref-meta: selector_journal:American Economic Review;ChildD
 evelopment;De Economist ;Econometrica;Economic Development and Cultura
 l Change;Economica;Fiscal Studies;Industrial Relations;Journal of Deve
@@ -81776,6 +81876,11 @@ litical Economy;Journal of the American Statistical Association;Journa
 l of the European Economic Association;Labour Economics;Quarterly Jour
 nal of Economics;Review of Economic Studies;Review of Economics and St
 atistics;The American Economic Review;}
+
+@comment{jabref-meta: selector_publisher:Cambridge University Press;El
+ sevier Science B.V.;National Bureau of Economic Research;North-Hollan
+ d ;Oxford University Press;Princeton University Press;University of C
+h ic ago Press;}
 
 @comment{jabref-meta: groupsversion:3;}
 
