--- a/abccaretreatmenteffects_report_main_appendix.tex
+++ b/abccaretreatmenteffects_report_main_appendix.tex
@@ -24,7 +24,7 @@ The University of Chicago}
 \maketitle
 
 \singlespacing
-\pagebreak
+%\pagebreak
 \tableofcontents
 \listoffigures
 \listoftables
@@ -245,19 +245,20 @@ Note: This plot shows the number of participants, by experimental group, for who
 
 \noindent This section of the appendix assesses some of the critiques to ABC, which could apply to CARE as well. The critiques focus on the first phase of the program, to which we refer simply as ABC in this section of the appendix.\\
 
-\noindent The first critique we assess is that of \citet{}. The author asks if ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the raw mean difference between the treatment and the control groups in the Bayley Mental Development Index (MDI) at age 1.\footnote{The Bayley Mental Development Index is a standard measure of cognition at taken between ages 0 and 2 \citep{•}.} He finds a noticeable difference in the mean difference between cohorts 1 and 2 and cohorts 2 and 4, as early as six months after the treatment began. As \citet{} argues, this difference is conspicuous and we display it in Table~\ref{table:cohorts}. Importantly, the author fails to note that the mean differences have noticeably high standard errors.
+\noindent The first critique we assess is that of \citet{Spitz_1992_ABC-Retardation}. The author asks if ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the raw mean difference between the treatment and the control groups in the Bayley Mental Development Index (MDI) at age 1.\footnote{The Bayley Mental Development Index is a standard measure of cognition at taken between ages 0 and 2 \citep{Childrens-Health_2016_Bayley-Scales}.} He finds a noticeable difference in the mean difference between cohorts 1 and 2 and cohorts 2 and 4, as early as six months after the treatment began. As \citet{Spitz_1992_ABC-Retardation} argues, this difference is conspicuous and we display it in Table~\ref{table:cohorts}. Importantly, the author fails to note that the mean differences have noticeably high standard errors.
 
 \input{output/abc_cohorts}
 
-\noindent \citet{} states that: ``an essential question is whether the differences at 6 months of age were due to the intervention or where preexisting'' \citep[][p. 230]{•}. \citet{} proceeds with speculative exercises that lead him to state that it is questionable to conclude that the mean difference between the treatment and control groups as early as age six months is a consequence of the treatment.\footnote{The exact quote is: ``Even if the differences between experimental and control groups at 6 months of age were a consequence of the first few months of intervention, which is questionable, the negligible additional effects after age 4.5 more years in the program should at least make one cautious about this kind of intervention's potential [\ldots]'' \citep[][p. 235]{•}. We asses the former point before getting to the latter.}\\
+\noindent \citet{Spitz_1992_ABC-Retardation} states that: ``an essential question is whether the differences at 6 months of age were due to the intervention or where preexisting'' \citep[][p. 230]{Spitz_1992_ABC-Retardation}. \citet{Spitz_1992_ABC-Retardation} proceeds with speculative exercises that lead him to state that it is questionable to conclude that the mean difference between the treatment and control groups as early as age six months is a consequence of the treatment.\footnote{The exact quote is: ``Even if the differences between experimental and control groups at 6 months of age were a consequence of the first few months of intervention, which is questionable, the negligible additional effects after age 4.5 more years in the program should at least make one cautious about this kind of intervention's potential [\ldots]'' \citep[][p. 235]{Spitz_1992_ABC-Retardation}. We asses the former point before getting to the latter.}\\
 
 \noindent His argument oscillates from not receiving information on the maternal characteristics which he considers fundamental for his analysis to comparing test scores over the years.\footnote{He does not note that tests scores \textit{do not have a well-defined scale} and are hard to compare.}\\ 
 
-\noindent We make three annotations with respect to the comments in \citet{}.\\ 
+\noindent We make three annotations with respect to the comments in \citet{Spitz_1992_ABC-Retardation}.\\ 
 
 \noindent \textbf{1. Neither in cohort 3 nor in cohort 4 do mothers differ in observed characteristics between the treatment and the control groups.} When jointly testing the hypothesis of differences in a battery of observed characteristics, we fail to reject any difference between the families of these children (see Table~\ref{tab:baseline_coh3} and Table~\ref{tab:baseline_coh4}). Even when the point estimates present some differences, they are minimal. For example, treatment-group mothers differ from control-group mothers, on average, by having one more point in the IQ score, which has a population standard deviation of 15.\\
 
 \noindent \textbf{2. Other early childhood education programs have generated gains in cognition very early in life, as soon as a year after the program begins.} A more recent program, the Infant Health and Development Program (IHDP), treated children from ages 0 to 3. \citet{Gross_Spiker_etal_1997_BOOKHelpinglowbirth} thoroughly describe this program. A lot of its elements were based on ABC and CARE. The program offered an average of eight hours a week of center-based childcare from ages 1 to 3, weekly home visits from ages 0 to 1, and bi-monthly home visits from ages 1 to 3. Measures on the Bayley MDI at 12 and 24 months are available. The most intensive part of the treatment, center-based childcare, began at age 12 months in IHDP while it began at birth in ABC. As in ABC, after a few months of center-based childcare, the effects on cognition were substantial in IHDP.
+
 \input{output/ihdp_bayley}
 
 \noindent \textbf{3. The effects on cognition are sustained throughout childhood and up to age 21 even when partialing out the Bayley MDI at ages 12 and 24 months.} When partialing out in a linear regression the score in the Bayley MDI tests both at twelve and twenty-four months of age, the treatment effects on cognition, measured by the mean difference between the treatment and the control groups in different IQ test scores, are still significant and are sustained up to age 21 (see Figure~\ref{fig:treatiqsabc}).
@@ -272,7 +273,7 @@ Note: This plot shows the number of participants, by experimental group, for who
 
 \noindent The author raises an additional concern. He states that even if the early-life effects on the Bayley MDI were true, the effects were not long-lasting. When doing so, he exclusively refers to the effects the program had on cognition. As we vastly document throughout the main paper, however, ABC had effects on a wide set of life-cycle outcomes, which perhaps are more important than the effects on cognition if measured by the economic gains they generate. Examples include: employment at age 30 for males, high-school graduation for females, and a variety of health measures at age 34 for males. We document these effects in the main paper.\\
 
-\noindent This critique relates to a second critique that has been made to ABC. Mostly based on the fade-out of the effects on cognition and on results on age-21 outcomes, some studies claim that ABC had no sustained long-term effects. In addition to the evidence we cite above, it is important to add the following. \textbf{4. The treatment effects of ABC differed by gender.} For example, we find substantial effects on employment for males and high-school graduation for females. This does not mean that the program did not work. It means that market conditions could affect the way in which the participants of the program could have benefited from its effects.\\
+\noindent This critique relates to a second critique that has been made to ABC.\footnote{See, for example, \citet{Besharov-etal_2011_ABCProject}.} Mostly based on the fade-out of the effects on cognition and on results on age-21 outcomes, some studies claim that ABC had no sustained long-term effects. In addition to the evidence we cite above, it is important to add the following. \textbf{4. The treatment effects of ABC differed by gender.} For example, we find substantial effects on employment for males and high-school graduation for females. This does not mean that the program did not work. It means that market conditions could affect the way in which the participants of the program could have benefited from its effects.\\
 
 \newgeometry{top=.5in, bottom=.5in, left=.5in, right=.5in}
 
@@ -321,7 +322,7 @@ Case & Child ID & Initial Assignment & Compromise Description & Data Availabilit
 
 \restoregeometry
 
-\noindent The third and last critique we assess is that of compromised randomization.\footnote{See for example \citet{} and the multiple studies cited there.} The main critique to the program with this respect is that seven children in the treatment group did not comply to their initial assignment and one child switched from control to treatment status. This critique refers to the children labeled with the following IDs by the program: N/A Case A, N/A Case B, N/A Case C, N/A Case D, 900, 912, 922, and 78 (see Table~\ref{table:compromised}). Although we document more cases of compromised randomization, we start by assessing these eight cases.\footnote{Our methodology assess all the cases except the children for whom we do not have data at all (Case A, N/A Case B, N/A Case C, N/A Case D). We are not able to account for them because our method is based on observing at least some baseline characteristics. See Section~\ref{section:methodology} in the main paper for more details.}\\
+\noindent The third and last critique we assess is that of compromised randomization.\footnote{See for example \citet{Baumeister-Bacharach_2000_Early-Generic} and the multiple studies cited there.} The main critique to the program with this respect is that seven children in the treatment group did not comply to their initial assignment and one child switched from control to treatment status. This critique refers to the children labeled with the following IDs by the program: N/A Case A, N/A Case B, N/A Case C, N/A Case D, 900, 912, 922, and 78 (see Table~\ref{table:compromised}). Although we document more cases of compromised randomization, we start by assessing these eight cases.\footnote{Our methodology assess all the cases except the children for whom we do not have data at all (Case A, N/A Case B, N/A Case C, N/A Case D). We are not able to account for them because our method is based on observing at least some baseline characteristics. See Section~\ref{section:methodology} in the main paper for more details.}\\
 
 \noindent First, we propose a method to assess the non-compliance of children 900, 912, 922, and 78, for whom we have data available from ages 0 to 8. This allows for the possibility to adjust the mean difference between the treatment and the control groups, using a standard Bloom estimator \citep{Bloom_1984_ER}. This estimator accounts for compliance, by weighting the mean difference by a measure of the probability of compliance. It takes the following form: 
 
