--- a/output/baseline_balance_abccare.tex
+++ b/output/baseline_balance_abccare.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{Baseline Characteristics, ABC and CARE \label{tab:baseline}}
+\caption{Baseline Characteristics Comparison between ABC and CARE \label{tab:baseline}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
@@ -33,7 +33,7 @@
     \begin{tablenotes}
     \scriptsize
     \item 
-    Note: This table shows the balance in observed characteristics between the ABC and CARE subjects at baseline.
+    Note: This table compares baseline, observed characteristics between ABC and CARE. 
     For each characteristic, we present the $p$-value from a single hypothesis test.
     We also present the $p$-values from multiple testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
